--- a/style.css
+++ b/style.css
@@ -1,35 +1,49 @@
-h1 {
-    color:black;
-    font-style: italic;
-    font-size: 100px;
+
+body {
+
+    background-color: #696969
+
+
+
+
+
 
 }
 
-p {
-    font-style: italic;
-    font-size: 20px;
-    color: black;
+
+
+
+.wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1024px;
 }
 
-.box1 {
-    background-color: yellow;
-    width: 600px;
+
+
+
+header {
+    background-color: red;
+    height: 118px;
+    
+    
+}
+nav {
+    background-color: blue;
+    height: 40px;
+ 
+}
+main {
+    background-color: orange;
     height: 400px;
-     
+  
+
 }
-.box2 {
-    background-color: pink;
-    width: 400px;
-    height: 250px;
+footer {
+    background-color: greenyellow;
+    height: 100px;
+  
+
 }
 
-.box3 {
-    background: dimgrey;
-    width: 100px;
-    height: 300px;
-}
-.box4 {
-    background: purple;
-    width: 350px;
-    height: 120px;
-}
+
